MOSIP-34117 - Fixed master data failures
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/apitest/src/main/resources/masterdata/FetchLocation/FetchLocation.yml
+++ b/apitest/src/main/resources/masterdata/FetchLocation/FetchLocation.yml
@@ -225,7 +225,7 @@ FetchLocation:
       input: '{
       "langcode": "eng",
       "locationname": "$REMOVE$",
-      "locationcode": "$LOCATIONCODE$",
+      "locationcode": "$ID:CreateLocationData_All_Valid_Smoke_Sid_code$",
       "hierarchyname": "$REMOVE$"
       }'
       output: '{
