--- a/apitest/src/main/resources/masterdata/RegistrationCenter/UpdateRegistrationCenter.yml
+++ b/apitest/src/main/resources/masterdata/RegistrationCenter/UpdateRegistrationCenter.yml
@@ -20,7 +20,7 @@ UpdateRegistrationCenter:
     "isActive": true,
     "langCode": "eng",
     "latitude":"78.5478",
-    "locationCode":"$LOCATIONCODE$",
+    "locationCode":"$ID:CreateLocationData_All_Valid_Smoke_Sid_code$",
     "longitude":"45.2456",
     "lunchEndTime":"00:00:00",
     "lunchStartTime":"00:00:00",
@@ -60,7 +60,7 @@ UpdateRegistrationCenter:
     "isActive": true,
     "langCode": "eng",
     "latitude":"78.5478",
-    "locationCode":"$LOCATIONCODE$",
+    "locationCode":"$ID:CreateLocationData_All_Valid_Smoke_Sid_code$",
     "longitude":"45.2456",
     "lunchEndTime":"00:00:00",
     "lunchStartTime":"00:00:00",
@@ -99,7 +99,7 @@ UpdateRegistrationCenter:
     "isActive": true,
     "langCode": "eng",
     "latitude": "33.995612",
-    "locationCode": "$LOCATIONCODE$",
+    "locationCode": "$ID:CreateLocationData_All_Valid_Smoke_Sid_code$",
     "longitude": "-6.815281",
     "lunchEndTime": "14:00:00",
     "lunchStartTime": "13:00:00",
@@ -143,7 +143,7 @@ UpdateRegistrationCenter:
     "isActive": true,
     "langCode": "eng",
     "latitude": "",
-    "locationCode": "$LOCATIONCODE$",
+    "locationCode": "$ID:CreateLocationData_All_Valid_Smoke_Sid_code$",
     "longitude": "-6.815281",
     "lunchEndTime": "14:00:00",
     "lunchStartTime": "13:00:00",
@@ -186,7 +186,7 @@ UpdateRegistrationCenter:
     "isActive": true,
     "langCode": "eng",
     "latitude": "fbheafg",
-    "locationCode": "$LOCATIONCODE$",
+    "locationCode": "$ID:CreateLocationData_All_Valid_Smoke_Sid_code$",
     "longitude": "-6.815281",
     "lunchEndTime": "14:00:00",
     "lunchStartTime": "13:00:00",
