--- a/apitest/src/main/resources/masterdata/BlockListedWords/CreateBlockListedWords.yml
+++ b/apitest/src/main/resources/masterdata/BlockListedWords/CreateBlockListedWords.yml
@@ -3,6 +3,7 @@ CreateBlockListedWords:
       endPoint: /v1/masterdata/blocklistedwords
       role: admin
       templateFields: ["description","word"]
+      description: Create block listed words with valid data
       restMethod: post
       inputTemplate: masterdata/BlockListedWords/blockListedWords
       outputTemplate: masterdata/BlockListedWords/blockListedWordsResult
@@ -20,6 +21,7 @@ CreateBlockListedWords:
       endPoint: /v1/masterdata/blocklistedwords
       role: admin
       templateFields: ["description","word"]
+      description: Create block listed word with space in word
       restMethod: post
       inputTemplate: masterdata/BlockListedWords/blockListedWords
       outputTemplate: masterdata/error
@@ -42,6 +44,7 @@ CreateBlockListedWords:
       endPoint: /v1/masterdata/blocklistedwords
       role: admin
       templateFields: ["description"]
+      description: Create block listed words with invalid length of word more than 128 charectars      
       restMethod: post
       inputTemplate: masterdata/BlockListedWords/blockListedWords
       outputTemplate: masterdata/error
@@ -64,6 +67,7 @@ CreateBlockListedWords:
       endPoint: /v1/masterdata/blocklistedwords
       role: admin
       templateFields: ["word"]
+      description: Create block listed words with invalid Description of more than 256 charectars       
       restMethod: post
       inputTemplate: masterdata/BlockListedWords/blockListedWords
       outputTemplate: masterdata/error
@@ -86,6 +90,7 @@ CreateBlockListedWords:
       endPoint: /v1/masterdata/blocklistedwords
       role: admin
       templateFields: ["description"]
+      description: Create block listed words with invalid Empty word     
       restMethod: post
       inputTemplate: masterdata/BlockListedWords/blockListedWords
       outputTemplate: masterdata/error
