--- a/apitest/src/main/resources/masterdata/BulkUpload/BulkUpload.yml
+++ b/apitest/src/main/resources/masterdata/BulkUpload/BulkUpload.yml
@@ -2,6 +2,7 @@ BulkUpload:
    Masterdata_BulkUpload_Smoke_sid:
       endPoint: /v1/admin/bulkupload
       role: admin
+      description: Bulk Upload with valid data
       restMethod: post
       inputTemplate: masterdata/BulkUpload/bulkUpload
       outputTemplate: masterdata/BulkUpload/bulkUploadResult
@@ -18,6 +19,7 @@ BulkUpload:
    Masterdata_BulkUpload_update_gender_name:
       endPoint: /v1/admin/bulkupload
       role: admin
+      description: Update Gender Name from Bilk upload
       restMethod: post
       inputTemplate: masterdata/BulkUpload/bulkUpload
       outputTemplate: masterdata/BulkUpload/bulkUploadResult
