--- a/apitest/src/main/resources/masterdata/FetchLocation/FetchLocation.yml
+++ b/apitest/src/main/resources/masterdata/FetchLocation/FetchLocation.yml
@@ -238,7 +238,7 @@ FetchLocation:
       input: '{
       "langcode": "eng",
       "locationname": "$REMOVE$",
-      "locationcode": "$LOCATIONCODE$",
+      "locationcode": "$ID:CreateLocationData_All_Valid_Smoke_Sid_code$",
       "hierarchyname": "$REMOVE$"
       }'
       output: '{
