MOSIP-34117 - Fixed master data failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/apitest/src/main/resources/masterdata/Device/UpdateDevice.yml
+++ b/apitest/src/main/resources/masterdata/Device/UpdateDevice.yml
@@ -20,7 +20,7 @@ UpdateDevice:
 	"requesttime": "$TIMESTAMP$"
 	}'
       output: '{
-    "name": "$IGNORE$",
+    "name": "testDevicedummy updated",
 	"deviceSpecId": "743",
 	"ipAddress": "172.23.174.113",
 	"isActive": "$IGNORE$",
@@ -51,7 +51,7 @@ UpdateDevice:
 	"requesttime": "$TIMESTAMP$"
 	}'
       output: '{
-    "name": "$IGNORE$",
+    "name": "testDevicedummy updated",
 	"deviceSpecId": "736",
 	"ipAddress": "172.23.174.113",
 	"isActive": "$IGNORE$",
