--- a/apitest/src/main/resources/masterdata/UserCenterMapping/UpdateUserCenterMapping.yml
+++ b/apitest/src/main/resources/masterdata/UserCenterMapping/UpdateUserCenterMapping.yml
@@ -7,20 +7,20 @@ UpdateUserCenterMapping:
       inputTemplate: masterdata/UserCenterMapping/updateUserCenterMapping
       outputTemplate: masterdata/UserCenterMapping/userCenterMappingResult
       input: '{
-     "id": "func_auto_test_user",
+     "id": "$ID:CreateZoneUser_All_Valid_Smoke_Sid_userId$",
      "name": "automationUpdated",
      "statusCode": "active",
-     "regCenterId": "10005",
+     "regCenterId": "$ID:CreateRegCenter_allValid_smoke_sid_id$",
      "langCode": "eng",
      "requesttime": "$TIMESTAMP$"
 }'
       output: '{
     "name": "automationUpdated",
     "statusCode": "active",
-    "regCenterId": "10005",
-    "zoneCode": "BSN",
-    "zoneName": "Benslimane",
-    "regCenterName": "Center Mehdia"
+    "regCenterId": "$IGNORE$",
+    "zoneCode": "RBT",
+    "zoneName": "Rabat",
+    "regCenterName": "Test_Loc_A_"
     }'
    MasterData_UserCenterMapping_Invalid_InputParameter_regCenterId_Missing:
       endPoint: /v1/masterdata/usercentermapping
@@ -30,7 +30,7 @@ UpdateUserCenterMapping:
       inputTemplate: masterdata/UserCenterMapping/updateUserCenterMapping
       outputTemplate: masterdata/error
       input: '{
-     "id": "func_auto_test_user",
+     "id": "$ID:CreateZoneUser_All_Valid_Smoke_Sid_userId$",
      "name": "automation",
      "statusCode": "active",
      "regCenterId": "",
@@ -53,7 +53,7 @@ UpdateUserCenterMapping:
       inputTemplate: masterdata/UserCenterMapping/updateUserCenterMapping
       outputTemplate: masterdata/error
       input: '{
-     "id": "func_auto_test_user",
+     "id": "$ID:CreateZoneUser_All_Valid_Smoke_Sid_userId$",
      "name": "automation",
      "statusCode": "active",
      "regCenterId": "124213",
