--- a/apitest/src/main/resources/masterdata/ZoneUser/CreateZoneUser.yml
+++ b/apitest/src/main/resources/masterdata/ZoneUser/CreateZoneUser.yml
@@ -1,5 +1,5 @@
 CreateZoneUser:
-   MasterData_CreateZoneUser_All_Valid_Smoke:
+   MasterData_CreateZoneUser_All_Valid_Smoke_Sid:
       endPoint: /v1/masterdata/zoneuser
       role: globalAdmin
       checkErrorsOnlyInResponse: true
@@ -7,8 +7,8 @@ CreateZoneUser:
       inputTemplate: masterdata/ZoneUser/zoneUser
       outputTemplate: masterdata/ZoneUser/zoneUserResult
       input: '{
-    "zoneCode": "$ZONE_CODE$",
-    "userId": "func_auto_test_user",
+    "zoneCode": "$ID:CreateRegCenter_allValid_smoke_sid_zoneCode$",
+    "userId": "masterdata-220005",
     "isActive": true,
     "langCode": "eng",
 	"requesttime": "$TIMESTAMP$"
