--- a/apitest/src/main/resources/masterdata/GetBiometricTypes/GetBiometricTypes.yml
+++ b/apitest/src/main/resources/masterdata/GetBiometricTypes/GetBiometricTypes.yml
@@ -1,7 +1,7 @@
 GetBiometricTypes:
    Masterdata_GetBiometricTypes_allValid_smoke:
       endPoint: /v1/masterdata/biometrictypes
-      descrption: Fetch Biometric Types with all valid data 
+      description: Fetch Biometric Types with all valid data 
       role: admin
       checkErrorsOnlyInResponse: true
       restMethod: get
