MOSIP-34506 - Fixed masterdata failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/apitest/src/main/resources/masterdata/DeviceSpecSearch/DeviceSpecSearch.yml
+++ b/apitest/src/main/resources/masterdata/DeviceSpecSearch/DeviceSpecSearch.yml
@@ -212,9 +212,9 @@ DeviceSpecSearch:
       input: '{
     "filters": [
       {
-        "columnName": "name",
+        "columnName": "isActive",
         "type": "equals",
-        "value": "Camera",
+        "value": "true",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
