--- a/apitest/src/main/resources/masterdata/FilterLocationData/FilterLocationData.yml
+++ b/apitest/src/main/resources/masterdata/FilterLocationData/FilterLocationData.yml
@@ -2,13 +2,14 @@ FilterLocationData:
    MasterData_FilterLocationData_Valid_Smoke:
       endPoint: /v1/masterdata/locations/filtervalues
       role: admin
-      templateFields: ["columnName"]
+      checkErrorsOnlyInResponse: true
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/FilterLocationData/filterLocationData
       outputTemplate: masterdata/FilterLocationData/filterLocationDataResult
       input: '{
 	"filters": [{
-		"columnName": "Zone",
+		"columnName": "code",
 		"type": "unique",
 		"text": "$ZONE_CODE$"
 	}],
