--- a/apitest/src/main/resources/masterdata/FetchLocation/FetchLocation.yml
+++ b/apitest/src/main/resources/masterdata/FetchLocation/FetchLocation.yml
@@ -225,7 +225,7 @@ FetchLocation:
       input: '{
       "langcode": "eng",
       "locationname": "$REMOVE$",
-      "locationcode": "$ID:CreateLocationData_All_Valid_Smoke_Sid_code$",
+      "locationcode": "BNMR",
       "hierarchyname": "$REMOVE$"
       }'
       output: '{
