MOSIP-34506 - Fixed masterdata failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/apitest/src/main/resources/masterdata/UpdateDocCategory/UpdateDocCategory.yml
+++ b/apitest/src/main/resources/masterdata/UpdateDocCategory/UpdateDocCategory.yml
@@ -31,7 +31,7 @@ UpdateDocCategory:
 }'
 
    MasterData_UpdateDocCategory_Invalid_code:  
-      endPoint: /v1/masterdata/documentcategories?isActive=true&code=ABC
+      endPoint: /v1/masterdata/documentcategories?isActive=true&code=INVALID
       role: admin
       restMethod: patch
       inputTemplate: masterdata/UpdateDocCategory/updateDocCategory
