MOSIP-34506 - Fixed masterdata failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/apitest/src/main/resources/masterdata/RegistrationCenter/CreateRegistrationCenter.yml
+++ b/apitest/src/main/resources/masterdata/RegistrationCenter/CreateRegistrationCenter.yml
@@ -30,7 +30,7 @@ CreateRegistrationCenter:
    "zoneCode":"RBT",
    "id":"",
    "isActive":"false",
-   "numberOfKiosks":0,
+   "numberOfKiosks":"1",
    "exceptionHolidayDate":"2021-11-12",
    "exceptionHolidayName":"",
    "exceptionHolidayReson":"",
@@ -248,7 +248,7 @@ CreateRegistrationCenter:
    "zoneCode":"RBT",
    "id":"",
    "isActive":"false",
-   "numberOfKiosks":-1,
+   "numberOfKiosks":"-1",
    "exceptionHolidayDate":"2021-11-12",
    "exceptionHolidayName":"",
    "exceptionHolidayReson":"",
