INJIMOB-1566 Description updated for masterData 6 APIs
Signed-off-by: NitinHegde <nitin.k@cyberpwn.com>

--- a/apitest/src/main/resources/masterdata/SearchMachine/SearchMachine.yml
+++ b/apitest/src/main/resources/masterdata/SearchMachine/SearchMachine.yml
@@ -13,7 +13,7 @@ SearchMachine:
       {
         "columnName": "name",
         "type": "equals",
-        "value": "Mach-Test",
+        "value": "Mach-Test updated",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -45,7 +45,7 @@ SearchMachine:
       {
         "columnName": "name",
         "type": "contains",
-        "value": "Mach-Test",
+        "value": "Mach-Test updated",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -433,7 +433,7 @@ SearchMachine:
       {
         "columnName": "name",
         "type": "equals",
-        "value": "Mach-Test",
+        "value": "Mach-Test updated",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       },
@@ -472,7 +472,7 @@ SearchMachine:
       {
         "columnName": "name",
         "type": "equals",
-        "value": "Mach-Test",
+        "value": "Mach-Test updated",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -503,7 +503,7 @@ SearchMachine:
       {
         "columnName": "name",
         "type": "contains",
-        "value": "Mach-Test",
+        "value": "Mach-Test updated",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
@@ -587,7 +587,7 @@ SearchMachine:
       {
         "columnName": "dfadf",
         "type": "equals",
-        "value": "Mach-Test",
+        "value": "Mach-Test updated",
         "fromValue": "$REMOVE$",
         "toValue": "$REMOVE$"
       }
