--- a/apitest/src/main/resources/masterdata/RegistrationCenter/CreateRegistrationCenter.yml
+++ b/apitest/src/main/resources/masterdata/RegistrationCenter/CreateRegistrationCenter.yml
@@ -203,7 +203,7 @@ CreateRegistrationCenter:
    "perKioskProcessTime":"00:30:00",
    "timeZone":"(GTM+01:00) CENTRAL EUROPEAN TIME",
    "workingHours":3.5,
-   "zoneCode":"$ZONE_CODE$",
+   "zoneCode":"RBT",
    "id":"",
    "isActive":"false",
    "numberOfKiosks":null,
@@ -217,7 +217,7 @@ CreateRegistrationCenter:
       output: '{
   "errors": [
     {
-      "errorCode": "KER-MSD-307",
+      "errorCode": "KER-MSD-281",
       "message": "$IGNORE$"
     }
   ]
@@ -251,7 +251,7 @@ CreateRegistrationCenter:
    "perKioskProcessTime":"00:30:00",
    "timeZone":"(GTM+01:00) CENTRAL EUROPEAN TIME",
    "workingHours":3.5,
-   "zoneCode":"$ZONE_CODE$",
+   "zoneCode":"RBT",
    "id":"",
    "isActive":"false",
    "numberOfKiosks":-1,
@@ -264,7 +264,7 @@ CreateRegistrationCenter:
       output: '{
   "errors": [
     {
-      "errorCode": "KER-MSD-307",
+      "errorCode": "KER-MSD-281",
       "message": "$IGNORE$"
     }
   ]
