--- a/apitest/src/main/resources/masterdata/TemplateFileFormat/CreateTemplateFileFormat.yml
+++ b/apitest/src/main/resources/masterdata/TemplateFileFormat/CreateTemplateFileFormat.yml
@@ -159,7 +159,7 @@ CreateTemplateFileFormat:
       endPoint: /v1/masterdata/templatefileformats
       description: Create a template file format with the input parameter language code exceeding the maximum length of 3 characters
       role: admin
-      templateFields: ["description"]
+      templateFields: []
       restMethod: post
       inputTemplate: masterdata/TemplateFileFormat/templateFileFormat
       outputTemplate: masterdata/error
