MOSIP-34506 - Fixed masterdata failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/apitest/src/main/resources/masterdata/RegistrationCenter/UpdateRegistrationCenter.yml
+++ b/apitest/src/main/resources/masterdata/RegistrationCenter/UpdateRegistrationCenter.yml
@@ -70,7 +70,7 @@ UpdateRegistrationCenter:
     "workingHours": "8:00:00",
     "zoneCode":"$ZONE_CODE$",
     "id": "$ID:CreateRegCenter_allValid_smoke_sid_id$",
-    "numberOfKiosks":12,
+    "numberOfKiosks":"12",
     "exceptionHolidayDate": "2020-11-16",
     "exceptionHolidayName": "TestHoliday",
     "exceptionHolidayReson": "CenterCreation", 
