MOSIP-34506 - Fixed masterdata failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/apitest/src/main/resources/masterdata/DeleteZoneUser/DeleteZoneUser.yml
+++ b/apitest/src/main/resources/masterdata/DeleteZoneUser/DeleteZoneUser.yml
@@ -7,8 +7,8 @@ DeleteZoneUser:
       inputTemplate: masterdata/DeleteZoneUser/deleteZoneUser
       outputTemplate: masterdata/DeleteZoneUser/deleteZoneUserResult
       input: '{
-    "userid": "func_auto_test_user",
-    "zonecode": "$ZONE_CODE$"
+    "userid": "masterdata-220005",
+    "zonecode": "$ID:CreateRegCenter_allValid_smoke_sid_zoneCode$"
   }'
       output: '{
 }'
