MOSIP-34506 - Fixed masterdata failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/apitest/src/main/resources/masterdata/GetRegistrationMachineUserMappingHistory/GetRegistrationMachineUserMappingHistory.yml
+++ b/apitest/src/main/resources/masterdata/GetRegistrationMachineUserMappingHistory/GetRegistrationMachineUserMappingHistory.yml
@@ -1,6 +1,7 @@
 GetRegistrationMachineUserMappingHistory:
    MasterData_GetRegistrationMachineUserMappingHistory_allValid_smoke:
       endPoint: /v1/masterdata/getregistrationmachineusermappinghistory/{effdtimes}/{registrationcenterid}/{machineid}/{userid}
+      description: Retrieve registration machine user mapping history missing using valid effdtimes, registration center ID, machine ID, user id
       role: admin
       checkErrorsOnlyInResponse: true
       restMethod: get
