--- a/apitest/src/main/resources/masterdata/SearchMachineSpec/SearchMachineSpec.yml
+++ b/apitest/src/main/resources/masterdata/SearchMachineSpec/SearchMachineSpec.yml
@@ -2,7 +2,7 @@ SearchMachineSpec:
    Masterdata_SearchMachineSpec_Equals_Name_eng_smoke:
       endPoint: /v1/masterdata/machinespecifications/search
       role: admin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachineSpec/searchMachineSpec
       outputTemplate: masterdata/SearchMachineSpec/searchMachineSpecResult
@@ -42,7 +42,7 @@ SearchMachineSpec:
    Masterdata_SearchMachineSpec_Valid_sortType_DESC:
       endPoint: /v1/masterdata/machinespecifications/search
       role: admin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachineSpec/searchMachineSpec
       outputTemplate: masterdata/SearchMachineSpec/searchMachineSpecResult
@@ -80,7 +80,7 @@ SearchMachineSpec:
    Masterdata_SearchMachineSpec_Valid_col_as_Model:
       endPoint: /v1/masterdata/machinespecifications/search
       role: admin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachineSpec/searchMachineSpec
       outputTemplate: masterdata/SearchMachineSpec/searchMachineSpecResult
@@ -118,7 +118,7 @@ SearchMachineSpec:
    Masterdata_SearchMachineSpec_Valid_col_as_Brand:
       endPoint: /v1/masterdata/machinespecifications/search
       role: admin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachineSpec/searchMachineSpec
       outputTemplate: masterdata/SearchMachineSpec/searchMachineSpecResult
@@ -157,7 +157,7 @@ SearchMachineSpec:
       endPoint: /v1/masterdata/machinespecifications/search
       role: admin
       checkErrorsOnlyInResponse: true
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachineSpec/searchMachineSpec
       outputTemplate: masterdata/SearchMachineSpec/searchMachineSpecResult
@@ -185,7 +185,7 @@ SearchMachineSpec:
    Masterdata_SearchMachineSpec_Valid_col_as_Name_FltrTyp_startsWith:
       endPoint: /v1/masterdata/machinespecifications/search
       role: admin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachineSpec/searchMachineSpec
       outputTemplate: masterdata/SearchMachineSpec/searchMachineSpecResult
@@ -223,7 +223,7 @@ SearchMachineSpec:
    Masterdata_SearchMachineSpec_Valid_col_as_Name_FltrTyp_contains:
       endPoint: /v1/masterdata/machinespecifications/search
       role: admin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachineSpec/searchMachineSpec
       outputTemplate: masterdata/SearchMachineSpec/searchMachineSpecResult
@@ -533,7 +533,7 @@ SearchMachineSpec:
    Masterdata_SearchMachineSpec_inValid_pagesize:
       endPoint: /v1/masterdata/machinespecifications/search
       role: admin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachineSpec/searchMachineSpec
       outputTemplate: masterdata/error
