--- a/apitest/src/main/resources/masterdata/FetchValidDocuments/FetchValidDocuments.yml
+++ b/apitest/src/main/resources/masterdata/FetchValidDocuments/FetchValidDocuments.yml
@@ -1,7 +1,6 @@
 FetchValidDocuments:
    MasterData_FetchValidDocuments_allValid_smoke_with_lang:
-      endPoint: /v1/masterdata/validdocuments/{languagecode}
-      description: Retrieve valid Documents By languagecode with all valid data
+      endPoint: /v1/masterdata/validdocuments/{languageCode}
       role: admin
       checkErrorsOnlyInResponse: true
       templateFields: ["languageCode"]
