--- a/apitest/src/main/resources/config/Kernel.properties
+++ b/apitest/src/main/resources/config/Kernel.properties
@@ -101,7 +101,7 @@ auditActuatorEndpoint=/v1/auditmanager/actuator/info
 validateBindingEndpoint=ida-binding
 esignetWellKnownEndPoint=/v1/esignet/oidc/.well-known/openid-configuration
 signupSettingsEndPoint=/v1/signup/settings
-
+esignetActuatorPropertySection=esignet-default.properties
 
 
 
