--- a/apitest/src/main/resources/masterdata/MachineTypeSearch/MachineTypeSearch.yml
+++ b/apitest/src/main/resources/masterdata/MachineTypeSearch/MachineTypeSearch.yml
@@ -2,7 +2,7 @@ MachineTypeSearch:
    Masterdata_MachineTypeSearch_Equals_Name_eng_smoke:
       endPoint: /v1/masterdata/machinetypes/search
       role: admin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/MachineTypeSearch/machineTypeSearch
       outputTemplate: masterdata/MachineTypeSearch/machineTypeSearchResult
